--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-datepicker": "^2.9.6",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.11.0",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.1.1",
-    "styled-components": "^4.4.0"
+    "redux": "^4.0.4",
+    "styled-components": "^4.4.0",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
